Playing with Mixins

--- a/styles.less
+++ b/styles.less
@@ -1,9 +1,37 @@
-/* COLORS */
+/*--------------------------------------------*/
+/*---> COLORS <-------------------------------*/
+/*--------------------------------------------*/
 
-/* FONTS */
-	@bitter: 'Bitter', serif;
-	@margarine: 'Margarine', cursive;
+@ecoGreen: #00c853;
+@lightGreen: @ecoGreen + #222222;
+@darkGreen: @ecoGreen - #222222;
+
+/*--------------------------------------------*/
+/*---> FONTS <--------------------------------*/
+/*--------------------------------------------*/
+
+@bitter: 'Bitter', serif;
+@margarine: 'Margarine', cursive;
+
+.BitterFont(@textColor: white, @size: 1.5em){
+	font-family: @bitter;
+	color: @textColor;
+	font-size: @size;
+	line-height: @size * 1.5;
+}
+
+/*--------------------------------------------*/
+/*---> LAYOUT <-------------------------------*/
+/*--------------------------------------------*/
 
 html{
+	background: @ecoGreen;
+}
 
+/*--------------------------------------------*/
+/*---> TEXT <--------------------------------*/
+/*--------------------------------------------*/
+
+p{
+	.BitterFont(white, 20px);
 }
