Added LESS syntax highlighting

--- a/styles.less
+++ b/styles.less
@@ -24,14 +24,22 @@
 /*---> LAYOUT <-------------------------------*/
 /*--------------------------------------------*/
 
+@defaultPadding: 10px;
+
+.BoxModel(@size: @defaultPadding){
+	padding: @size;
+	margin: @size;
+}
+
 html{
 	background: @ecoGreen;
 }
 
 /*--------------------------------------------*/
-/*---> TEXT <--------------------------------*/
+/*---> TEXT <---------------------------------*/
 /*--------------------------------------------*/
 
 p{
 	.BitterFont(white, 20px);
+	.BoxModel;
 }
