Added background animation framework

--- a/styles.less
+++ b/styles.less
@@ -21,6 +21,15 @@
 }
 
 /*--------------------------------------------*/
+/*---> BACKGROUND <---------------------------*/
+/*--------------------------------------------*/
+
+@keyframes animatedBackground{
+	from{background: @ecoGreen;}
+	to{background: @darkGreen;}
+}
+
+/*--------------------------------------------*/
 /*---> LAYOUT <-------------------------------*/
 /*--------------------------------------------*/
 
@@ -33,6 +42,7 @@
 
 html{
 	background: @ecoGreen;
+	animation: animatedBackground 1s linear infinite;
 }
 
 /*--------------------------------------------*/
