--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,1 @@
-html{background:#00c853}p{font-family:Bitter,serif;color:#fff;font-size:20px;line-height:30px;padding:10px;margin:10px}
+@keyframes animatedBackground{from{background:#00c853}to{background:#00a631}}html{background:#00c853;animation:animatedBackground 1s linear infinite}p{font-family:Bitter,serif;color:#fff;font-size:20px;line-height:30px;padding:10px;margin:10px}
