--- a/style/styles.less
+++ b/style/styles.less
@@ -129,6 +129,7 @@ div#grass{
 	.Center();
 
 	input, button{
+		background: transparent;
 		height: @inputHeight;
 		line-height: @inputHeight + 0.25em;
 		margin: 3em auto;
@@ -143,8 +144,8 @@ div#grass{
 
 	button{
 		width: 20%;
-		background: @ecoGreen;
-		.BitterFont(white, 1.5em);
+		height: 3em;
+		.BitterFont(@darkGreen, 1.5em);
 	}
 
 }
