--- a/style/styles.less
+++ b/style/styles.less
@@ -77,6 +77,7 @@ div#wood{
 
 div#footer{
 	background: @ecoGreen;
+	border-bottom: 2em solid @darkGreen;
 	.FullWidth();
 }
 
@@ -130,7 +131,7 @@ div#wood{
 	.Center();
 
 	p{
-		.BitterFont(@darkGreen, 1.5em);
+		.BitterFont(@darkGreen, 1.25em);
 	}
 
 	input, button{
