Ready for Google Form Import

--- a/style/styles.less
+++ b/style/styles.less
@@ -76,9 +76,15 @@ div#wood{
 }
 
 div#footer{
-	background: @ecoGreen;
-	border-bottom: 2em solid @darkGreen;
+
+	opacity: 0.75;
+	background: @darkGreen;
 	.FullWidth();
+
+	p{
+		.BitterFont(white, 0.75em) !important;
+	}
+
 }
 
 /*--------------------------------------------*/
