Completed thank you page

--- a/style/styles.less
+++ b/style/styles.less
@@ -50,7 +50,7 @@
 }
 
 html{
-	background: transparent;
+	background: @ecoGreen;
 	//animation: animatedBackground 1s linear infinite;
 }
 
@@ -85,6 +85,16 @@ div#footer{
 		.BitterFont(white, 0.75em) !important;
 	}
 
+}
+
+div#thankYou{
+
+	background: url('retinaWood.png');
+	.FullWidth();
+
+	p{
+		.BitterFont(@darkGreen, 0.75em);
+	}
 }
 
 /*--------------------------------------------*/
