Updated teaser.html and footer

--- a/style/styles.less
+++ b/style/styles.less
@@ -124,7 +124,6 @@ div#wood{
 
 div#footer{
 
-	opacity: 0.75;
 	background: @darkGreen;
 	.FullWidth();
 
@@ -136,11 +135,11 @@ div#footer{
 
 div#thankYou{
 
-	background: url('retinaWood.png');
+	background: @darkGreen;
 	.FullWidth();
 
 	p{
-		.BitterFont(@darkGreen, 0.75em);
+		.BitterFont(white, 0.75em);
 	}
 }
 
