--- a/style/styles.less
+++ b/style/styles.less
@@ -144,6 +144,23 @@ div#thankYou{
 }
 
 /*--------------------------------------------*/
+/*---> STRUCTURE <----------------------------*/
+/*--------------------------------------------*/
+
+header{
+	
+	height: 60px;
+	.FullWidth();
+
+	div.fb-like{
+		height: 60px;
+		width: 400px;
+	}
+
+}
+
+
+/*--------------------------------------------*/
 /*---> TEXT <---------------------------------*/
 /*--------------------------------------------*/
 
