Transparent fixed header

--- a/style/styles.less
+++ b/style/styles.less
@@ -148,13 +148,24 @@ div#thankYou{
 /*--------------------------------------------*/
 
 header{
-	
+
+	position: fixed;
+	background: rgba(255, 255, 255, 0.5);
 	height: 60px;
 	.FullWidth();
 
+	img#headerLogo{
+		float: left;
+		height: 40px;
+		margin: 5px 10px 0 10px;
+	}
+
 	div.fb-like{
-		height: 60px;
-		width: 400px;
+		float: left;
+		height: 20px;
+		width: auto;
+		margin: 20px 0 0 0;
+		background: transparent;
 	}
 
 }
