Styled meals page

--- a/style/styles.less
+++ b/style/styles.less
@@ -131,6 +131,7 @@ div#upcomingMeals{
 	background: rgba(255, 255, 255, 0.25);
 	padding: 1em 0;
 	.BitterFont(@darkGreen);
+	.Center();
 }
 
 div#footer{
@@ -175,7 +176,7 @@ header{
 		float: right;
 		height: 20px;
 		width: auto;
-		margin: 20px 0 0 0;
+		margin: 20px 20px 0 0;
 		background: transparent;
 	}
 
