--- a/style/styles.less
+++ b/style/styles.less
@@ -184,12 +184,26 @@ div#upcomingMeals{
 	background: rgba(255, 255, 255, 0.25);
 	.BitterFont(@darkGreen);
 	.Center();
+	padding: 1em;
+	margin: 1em;
 }
 
 div.mealPreview{
-	background: orange;
+
+	display: inline-block;
+	background: @lightGreen;
 	width: 10em;
 	height: 10em;
+	padding: 1em;
+	margin: 1em;
+
+	h2{
+		background: rgba(255, 255, 255, 0.5);
+		padding: 0.5em;
+		margin: -1em;
+		position: relative;
+	}
+
 }
 
 /*--------------------------------------------*/
