Added CSS responsive section

--- a/style/styles.less
+++ b/style/styles.less
@@ -321,6 +321,22 @@ div.wood{
 }
 
 /*--------------------------------------------*/
+/*---> RESPONSIVE <---------------------------*/
+/*--------------------------------------------*/
+
+@media screen and (max-aspect-ratio: 3/2){
+	
+	input, button{
+		padding: 0;
+		display: block;
+		width: 100%;
+		.Center();
+		margin: 1em auto;
+	}
+
+}
+
+/*--------------------------------------------*/
 /*---> SCROLLBAR <----------------------------*/
 /*--------------------------------------------*/
 
