Added mealView style

--- a/style/styles.less
+++ b/style/styles.less
@@ -265,6 +265,14 @@ div.mealPreview{
 
 }
 
+div#mealDisplay{
+
+	img.meal-img{
+		width: 200px;
+	}
+
+}
+
 /*--------------------------------------------*/
 /*---> TEXT <---------------------------------*/
 /*--------------------------------------------*/
