Changed Dwolla button animations

--- a/style/styles.less
+++ b/style/styles.less
@@ -297,10 +297,11 @@ div.mealPreview{
 			border: none !important;
 			outline: none !important;
 			text-shadow: none !important;
+			transition: all 0.5s;
 		}
 
 		a.d-btn:hover, a.d-btn-simple:hover{
-			background: black;
+			background: @friendshipOrange;
 		}
 
 	}
