--- a/style/styles.less
+++ b/style/styles.less
@@ -288,7 +288,7 @@ div.mealPreview{
 			.BitterFont(@darkGreen, 0.75em);
 		}
 
-		a.d-btn, a.d-btn-simple{
+		a.d-btn, a.d-btn-simple, form.paypalForm{
 			height: 1.625em;
 			line-height: 1.625em;
 			width: 9em;
@@ -300,7 +300,7 @@ div.mealPreview{
 			transition: all 0.5s;
 		}
 
-		a.d-btn:hover, a.d-btn-simple:hover{
+		a.d-btn:hover, a.d-btn-simple:hover, form.paypalForm:hover{
 			background: @friendshipOrange;
 		}
 
