--- a/style/styles.less
+++ b/style/styles.less
@@ -304,12 +304,27 @@ div.mealPreview{
 			background: @friendshipOrange;
 		}
 
+		form.paypalForm{
 
-			button.paypal-button{
-				line-height: 1.625em;
+			background: transparent;
+			.FormCleanse();
+			.Center();
+
+			button{
+				background: @darkGreen;
+				height: 1.85em;
+				line-height: 1.85em;
 				width: 10em;
+				border-radius: 4em;
+				.BitterFont(white, 0.85em);
+				transition: all 0.5s;
 			}
 
+			button:hover{
+				background: @friendshipOrange;
+			}
+
+		}
 
 	}
 
