--- a/style/styles.less
+++ b/style/styles.less
@@ -318,6 +318,7 @@ div.mealPreview{
 				width: 10em;
 				border-radius: 4em;
 				.BitterFont(white, 0.85em);
+				opacity: 1.0;
 				transition: all 0.5s;
 			}
 
