--- a/style/styles.less
+++ b/style/styles.less
@@ -51,6 +51,7 @@
 	background-position: 0 0;
 	background-repeat: repeat-x;
 	animation: animatedBackgroundRight 800s linear infinite;
+	-webkit-animation: animatedBackgroundRight 800s linear infinite;
 }
 
 .AnimatedBannerLeft(@height: 200px){
@@ -59,6 +60,7 @@
 	background-position: 0 0;
 	background-repeat: repeat-x;
 	animation: animatedBackgroundLeft 800s linear infinite;
+	-webkit-animation: animatedBackgroundLeft 800s linear infinite;
 }
 
 /*--------------------------------------------*/
