Moved header z-index to top layer

--- a/style/styles.less
+++ b/style/styles.less
@@ -161,6 +161,7 @@ header{
 	background: rgba(255, 255, 255, 0.75);
 	border-bottom: 5px solid @ecoGreen;
 	height: 60px;
+	z-index: 20;
 	.FullWidth();
 
 	img#headerLogo{
