Changed styles in #editForm

--- a/style/styles.less
+++ b/style/styles.less
@@ -376,6 +376,19 @@ div.mealPreview{
 	}
 
 /*--------------------------------------------*/
+/*---> EDITING <------------------------------*/
+/*--------------------------------------------*/
+
+div#editForm{
+
+	input{
+		background: white;
+		border: none;
+	}
+
+}
+
+/*--------------------------------------------*/
 /*---> TEXT <---------------------------------*/
 /*--------------------------------------------*/
 
