--- a/style/styles.less
+++ b/style/styles.less
@@ -381,18 +381,61 @@ div.mealPreview{
 
 div#editForm{
 
+	float: left;
+	width: 100%;
+	clear: both;
+	.BitterFont();
+
 	label{
+
 		display: inline-block;
-		width: 20%;
-		background: orange;
+		width: 100%;
+		background: transparent;
+
+		div{
+			position: absolute;
+			display: inline-block;
+			width: 20%;
+			height: 1.75em;
+			line-height: 1.75em;
+			font-size: 1em;
+			color: @darkGreen;
+			text-align: left;
+		}
+
+		input{
+
+			width: 80%;
+			height: 1.75em;
+			line-height: 1.75em;
+			font-size: 1.5em;
+			clear: right;
+			border: none;
+			border-top: 0.1em solid @darkGreen;
+			margin-bottom: 0.5em;
+			background: linear-gradient(to top, transparent 50%, @lightGreen 50%);
+			background-size: 100% 200%;
+			background-position: left bottom;
+			padding: 0 0.5em;
+
+			&:focus{
+				background-position: left top;
+				color: white;
+			}
+
+			transition: all 0.5s ease;
+			-webkit-transition: all 0.5s ease;
+
+		}
+
 	}
 
-	input{
-		display: inline-block;
+	label.number{
 		width: 50%;
-		//clear: both;
-		background: white;
-		border: none;
+		float: left;
+		input{
+			width: 50%;
+		}
 	}
 
 }
