--- a/style/styles.less
+++ b/style/styles.less
@@ -395,6 +395,7 @@ div#editForm{
 		div{
 			position: absolute;
 			display: inline-block;
+			margin-top: -1.5em;
 			width: 20%;
 			height: 1.75em;
 			line-height: 1.75em;
@@ -408,15 +409,17 @@ div#editForm{
 			width: 80%;
 			height: 1.75em;
 			line-height: 1.75em;
-			font-size: 1.5em;
+			font-size: 1.25em;
 			clear: right;
 			border: none;
 			border-top: 0.1em solid @darkGreen;
-			margin-bottom: 0.5em;
+			text-align: center;
+			color: @charcoal;
 			background: linear-gradient(to top, transparent 50%, @lightGreen 50%);
 			background-size: 100% 200%;
 			background-position: left bottom;
-			padding: 0 0.5em;
+			padding: 0 0.25em;
+			margin-bottom: 1em;
 
 			&:focus{
 				background-position: left top;
@@ -434,7 +437,7 @@ div#editForm{
 		width: 50%;
 		float: left;
 		input{
-			width: 50%;
+			width: 60%;
 		}
 	}
 
