--- a/style/styles.less
+++ b/style/styles.less
@@ -395,7 +395,7 @@ div#editForm{
 		div{
 			position: absolute;
 			display: inline-block;
-			margin-top: -1.5em;
+			//margin-top: -1.5em;
 			width: 20%;
 			height: 1.75em;
 			line-height: 1.75em;
@@ -419,11 +419,13 @@ div#editForm{
 			background-size: 100% 200%;
 			background-position: left bottom;
 			padding: 0 0.25em;
+			margin-top: 1.5em;
 			margin-bottom: 1em;
 
 			&:focus{
 				background-position: left top;
 				color: white;
+				margin-top: 0;
 			}
 
 			transition: all 0.5s ease;
