--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -64,5 +64,23 @@
 }
 
 /*--------------------------------------------*/
+/*---> PANES <--------------------------------*/
+/*--------------------------------------------*/
+
+div.pane-container{
+	background: orange;
+	width: 100vw;
+	height: 30vw;
+	overflow: hidden;
+}
+
+section.stats-pane{
+	display: inline-block;
+	width: 40vw;
+	height: 30vw;
+	background: @charcoal;
+}
+
+/*--------------------------------------------*/
 /*---> STATISTICS <---------------------------*/
 /*--------------------------------------------*/
