Fixed font color fiasco

--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -150,14 +150,14 @@ li.tab{
 	}
 
 	.AnimateAll();
-	
+
 }
 
 /*--------------------------------------------*/
 /*---> PANES <--------------------------------*/
 /*--------------------------------------------*/
 
-@paneHeight: 80vh;
+@paneHeight: 90vh;
 
 div.pane-container{
 	background: transparent;
@@ -184,6 +184,9 @@ section.stats-pane{
 
 div.pane-content{
 	color: @charcoal;
+	p{
+		color: @charcoal
+	}
 }
 
 /*--------------------------------------------*/
